# ggg

./: .ggg  README.md  pyproject.toml  sample.ggg  setup.py
ggg/: __main__.py  app.py  config.py
ggg/mylib/: cmd.py  colorprint.py  shell.py
tests/: test_ggg.py
