[tool.poetry]
name = "ggg"
version = "0.1.0"
description = ""
authors = ["Nick <n@nickcheng.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^5.1.4"
click = "^7.0"
inquirer = "^2.6.3"
colorama = "^0.4.3"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
